--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@ a {
   text-decoration: none;
 }
 
+ul {
+  margin: 0 3rem;
+  padding: 0;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
