--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ ul {
   padding: 0;
 }
 
+/* main {
+  width: 100%;
+} */
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
